force-app/main/default/objects/Invoice__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <label>Delivery Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>