force-app/main/default/objects/Invoice__c/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <label>GCLID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>