force-app/main/default/objects/Invoice__c/fields/Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_URL__c</fullName>
    <formula>&quot;https://croyezimmigrationservicespvtltd--dev.sandbox.lightning.force.com/lightning/r/Invoice__c/&quot;+ Id +&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice URL</label>
    <type>Text</type>
</CustomField>