force-app/main/default/objects/Invoice__c/fields/LeadInvoice__c.field-meta.xml
<CustomField>
    <fullName>LeadInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>