force-app/main/default/objects/Invoice__c/fields/Mode_Terms_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Terms_of_Payment__c</fullName>
    <label>Mode/Terms of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>