force-app/main/default/objects/Invoice__c/fields/Opportunity_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_s_Manager__c</fullName>
    <formula>Opportunity__r.Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity&apos;s Manager</label>
    <type>Text</type>
</CustomField>