force-app/main/default/objects/Invoice__c/fields/Opportunity_s_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_s_Manager_Name__c</fullName>
    <formula>Opportunity__r.Owner.Manager.FirstName+&quot; &quot;+Opportunity__r.Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity&apos;s Manager Name</label>
    <type>Text</type>
</CustomField>