force-app/main/default/objects/Invoice__c/fields/Other_References__c.field-meta.xml
<CustomField>
    <fullName>Other_References__c</fullName>
    <label>Other References</label>
    <type>TextArea</type>
</CustomField>