force-app/main/default/objects/Invoice__c/fields/Payment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Payment_Channel__c</fullName>
    <label>Payment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Razor Pay</fullName>
            </value>
            <value>
                <fullName>Pay U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>