force-app/main/default/objects/Invoice__c/fields/TranactionId__c.field-meta.xml
<CustomField>
    <fullName>TranactionId__c</fullName>
    <label>TranactionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>