force-app/main/default/objects/Invoice__c/fields/Visa_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Visa_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visa Inquiry</label>
    <referenceTo>Visa_Inquiry__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>