force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Initiated_Date__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>LeadInvoice__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Visa_Inquiry__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>